--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "npx prisma generate"
+
   },
   "dependencies": {
     "@clerk/nextjs": "^4.31.3",
-    "@next-auth/prisma-adapter": "^1.0.7",
+    "@next-auth": "^1.0.7",
     "axios": "^1.5.1",
     "moment": "^2.29.4",
     "next": "13.5.6",
     "nextjs-toploader": "^1.5.3",
-    "prisma": "^5.16.1",
     "react": "^18",
     "react-date-picker": "^11.0.0",
     "react-dom": "^18",
