--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.31.3",
-    "@next-auth": "^1.0.7",
+    "next-auth": "^1.0.7", 
     "axios": "^1.5.1",
     "moment": "^2.29.4",
     "next": "13.5.6",
